--- a/styles/PizzaList.css
+++ b/styles/PizzaList.css
@@ -1,18 +1,16 @@
 
 .pizzaList{
-    max-width: 938px;
+    max-width: 919px;
     max-height: 650px;
     display: grid;
     row-gap: 50px;
     column-gap: 32px;
     grid-template-rows: repeat(3,1fr);
     grid-auto-flow: column;
-    margin-left: 10px;
-    padding-top: 47px;
     margin: 0 auto;
     overflow-x: scroll;
     margin-top: 47px;
-    padding-top:0;
-    overflow-y: hidden;
-    padding: 20px;
+    overflow-y: hidden; 
+    padding-bottom: 20px;
+    filter: drop-shadow(0px 1px 5px rgba(0, 0, 0, 0.17));
 }
